# myvo

config/: euroc_config.yaml
point_tracker/: CMakeLists.txt  package.xml
point_tracker/launch/: euroc.launch
point_tracker/src/: parameters.cpp  parameters.h  point_tracker.cpp  point_tracker.h  point_tracker_node.cpp
vo/: CMakeLists.txt  package.xml
vo/src/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameter.cpp  parameter.h  rosNode.cpp
vo/src/factor/: optimization.cpp  optimization.h  projection_factor.cpp  projection_factor.h  utility.h  visualization.cpp  visualization.h
